--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "de.tvsmiles.app"
+        applicationId "com.verve.tester.applovin.mediation"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -46,8 +46,8 @@ dependencies {
 
     implementation 'com.applovin:applovin-sdk:11.7.1'
     implementation 'net.pubnative:hybid.sdk:2.17.0'
-    //implementation 'com.applovin.mediation:verve-adapter:2.17.0.0'
-    //implementation 'net.pubnative:hybid.adapters.applovin:2.17.0'
+    implementation 'com.applovin.mediation:verve-adapter:2.17.0.0'
+    implementation 'net.pubnative:hybid.adapters.applovin:2.17.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
